--- a/vehicles/templates/vehicles/vehicle_list.html
+++ b/vehicles/templates/vehicles/vehicle_list.html
@@ -1,3 +1,4 @@
+<!-- vehicles/vehicle_list.html -->
 {% extends "base/base.html" %}
 {% load static %}
 {% load i18n %}
@@ -11,11 +12,11 @@
 
 <section class="hero-slider">
         <div class="slider-container">
-            <div class="slide active" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1486401899868-0e435ed85128?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');">
+            <div class="slide active" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://www.thereporterethiopia.com/wp-content/uploads/2023/05/EV-assembly-nears-completion-min.jpg');">
                 <div class="container">
                     <div class="slide-content">
-                        <h1>Find Your Dream Home Today</h1>
-                        <p>Thousands of properties waiting for you</p>
+                        <h1>Find Your Dream Car Today</h1>
+                        <p>Thousands of cars waiting for you</p>
                         <a href="#" class="btn btn-primary">Browse Listings</a>
                     </div>
                 </div>
